package com.mindera.mindswap;

public class Radio {
    public void turnOn() {
        System.out.println("Boom, boom, boom, boom, I want you in my room...");
    }
}
