@startuml

title __MINDSWAP's Class Diagram__\n

  namespace com.mindera.mindswap {
    class com.mindera.mindswap.Car {
        - tireSubstitutionNeeded : boolean
        - tires : Tire[]
        + Car()
        + accelerate()
        + changeTires()
        + refuel()
        - move()
    }
  }
  

  namespace com.mindera.mindswap {
    class com.mindera.mindswap.Engine {
        - fuelLevel : int
        - range : int
        + Engine()
        + generateEnergy()
        + setFuelLevel()
    }
  }
  

  namespace com.mindera.mindswap {
    class com.mindera.mindswap.Main {
        {static} + main()
    }
  }
  

  namespace com.mindera.mindswap {
    class com.mindera.mindswap.Radio {
        + turnOn()
    }
  }
  

  namespace com.mindera.mindswap {
    class com.mindera.mindswap.Tire {
        - integrity : int
        - wearAndTearRate : double
        + Tire()
        + moveCheckExplosion()
    }
  }
  

  com.mindera.mindswap.Car o-- com.mindera.mindswap.Engine : engine
  com.mindera.mindswap.Car o-- com.mindera.mindswap.Radio : radio
  com.mindera.mindswap.Car o-- com.mindera.mindswap.Tire : tires


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
